Clean up repositoty

--- a/package.json
+++ b/package.json
@@ -13,18 +13,11 @@
     "f1:monaco": "node -e \"import('./src/index.js').then(m => m.velocityForge.runF1GrandPrix({trackId: 'monaco'}))\"",
     "f1:silverstone": "node -e \"import('./src/index.js').then(m => m.velocityForge.runF1GrandPrix({trackId: 'silverstone'}))\"",
     "f1:spa": "node -e \"import('./src/index.js').then(m => m.velocityForge.runF1GrandPrix({trackId: 'spa'}))\"",
-    "f1:realtime": "node realtime-f1.js",
-    "f1:live": "node realtime-f1.js",
-    "f1:tracker": "node live-f1-tracker.js",
-    "f1:comprehensive": "node comprehensive-f1-simulator.js",
-    "f1:live-race": "node live-f1-tracker.js",
-    "simulator": "node competitive-mobility-simulator.js",
-    "f1:sim": "node competitive-mobility-simulator.js f1",
-    "formula-e": "node competitive-mobility-simulator.js formulaE",
-    "motogp": "node competitive-mobility-simulator.js motogp",
-    "drones": "node competitive-mobility-simulator.js drones",
-    "supply-chain": "node competitive-mobility-simulator.js supplyChain",
-    "traffic": "node competitive-mobility-simulator.js traffic",
+    "formula-e": "node real-f1-simulator.js formulaE",
+    "motogp": "node real-f1-simulator.js motogp",
+    "drones": "node real-f1-simulator.js drones",
+    "supply-chain": "node real-f1-simulator.js supplyChain",
+    "traffic": "node real-f1-simulator.js traffic",
     "real-f1": "node real-f1-simulator.js",
     "f1:monaco": "node real-f1-simulator.js monaco",
     "f1:silverstone": "node real-f1-simulator.js silverstone",
